added test cases and optimise logic

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,6 +1,11 @@
 game.welcome=Welcome to Minesweeper!
-game.grid.prompt=Enter the size of the grid (e.g. 4 for a 4x4 grid):
-game.mines.prompt=Enter the number of mines to place on the grid:
-game.select.prompt=Select a square to reveal (e.g. A1): 
-game.mine.hit=Oh no, you detonated a mine! Game over.
-game.congratulations=Congratulations, you have won the game!
+game.select.cell=Select a cell to reveal (e.g.A1 for row A, column 1): 
+game.hit.mine=Oh no, you hit a mine! Game over.
+game.win=Congratulations! You cleared all non-mine cells. You won!
+game.invalid.input=Invalid input
+game.input.error=Input cannot be empty.
+game.input.range.error=Row and column must be within the grid range.
+game.thanks=Thank you for playing Minesweeper!
+game.play.again=Press 'y' to play again, any other key to exit.
+game.grid.size.prompt=Please enter grid size (e.g. 4 for a 4x4 grid):
+game.mine.count.prompt=Please enter number of Mines :
