--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -1,6 +1,11 @@
-game.welcome=Bienvenue au Démineur !
-game.grid.prompt=Entrez la taille de la grille (par exemple, 4 pour une grille 4x4) :
-game.mines.prompt=Entrez le nombre de mines à placer sur la grille :
-game.select.prompt=Sélectionnez une case à révéler (par exemple, A1) : 
-game.mine.hit=Oh non, vous avez déclenché une mine ! Fin de la partie.
-game.congratulations=Félicitations, vous avez gagné la partie !
+game.welcome=Bienvenue à Démineur!
+game.select.cell=Sélectionnez une case à révéler (par exemple, A1 pour ligne A, colonne 1): 
+game.hit.mine=Oh non, vous avez touché une mine! Jeu terminé.
+game.win=Félicitations! Vous avez dégagé toutes les cases sans mines. Vous avez gagné!
+game.invalid.input=Entrée invalide
+game.input.error=L'entrée ne peut pas être vide.
+game.input.range.error=La ligne et la colonne doivent être dans la plage de la grille.
+game.thanks=Merci d'avoir joué à Démineur!
+game.play.again=Appuyez sur 'y' pour rejouer, sur n'importe quelle autre touche pour quitter.
+game.grid.size.prompt=Veuillez entrer la taille de la grille :
+game.mine.count.prompt=Veuillez entrer le nombre de mines :
