--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -8,4 +8,5 @@ game.input.range.error=Row and column must be within the grid range.
 game.thanks=Thank you for playing Minesweeper!
 game.play.again=Press 'y' to play again, any other key to exit.
 game.grid.size.prompt=Please enter grid size (e.g. 4 for a 4x4 grid):
-game.mine.count.prompt=Please enter number of Mines :
+game.mine.count.prompt=Please enter number of Mines (maximum is 35% of the total squares) :
+
