--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -8,4 +8,4 @@ game.input.range.error=La ligne et la colonne doivent être dans la plage de la g
 game.thanks=Merci d'avoir joué à Démineur!
 game.play.again=Appuyez sur 'y' pour rejouer, sur n'importe quelle autre touche pour quitter.
 game.grid.size.prompt=Veuillez entrer la taille de la grille (par exemple, 4 pour une grille de 4x4);
-game.mine.count.prompt=Veuillez entrer le nombre de mines :
+game.mine.count.prompt=Veuillez entrer le nombre de mines (le maximum est de 35% du total des carrés) :
