--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -5,7 +5,7 @@ game.win=Congratulations! You cleared all non-mine cells. You won!
 game.invalid.input=Invalid input
 game.input.error=Input cannot be empty.
 game.input.range.error=Row and column must be within the grid range.
-game.thanks=Thank you for playing Minesweeper!
+game.end.thanks=Game Ends ! Thank you for playing Minesweeper!
 game.play.again=Press 'y' to play again, any other key to exit.
 game.grid.size.prompt=Please enter grid size (e.g. 4 for a 4x4 grid):
 game.mine.count.prompt=Please enter number of Mines (maximum is 35% of the total squares) :
